# vidigo_kafka_package

./: README.md
vidigo_kafka/: pyproject.toml
vidigo_kafka/shell/: server.properties  xdp_kafka_restart.sh  xdp_kafka_run.sh  xdp_kafka_run_workers.sh  zookeeper.cfg
vidigo_kafka/vidigo_kafka/: AIOProducer.py  Consumer.py  __init__.py  adminClient.py
vidigo_kafka/vidigo_kafka/utils/: __init__.py  chunk_utils.py  kafka_health_check.py  kafka_logger.py
