[tool.poetry]
name = "vidigo-kafka"
version = "0.1.0"
description = ""
authors = ["xiigdLee <gd.lee@xiilab.com>"]
readme = "README.md"
packages = [{include = "vidigo_kafka/**/*.py"}]

[tool.poetry.dependencies]
python = "^3.10"
confluent-kafka = "^2.2.0"
requests = "^2.31.0"
filetype = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
